# stream

./: .env.example  .env.production.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yaml
.github/workflows/: ci.yaml  deploy.yaml
client/: index.html
client/src/: App.tsx  main.tsx  package.json
client/src/components/: Alert.tsx  Animation.tsx  Layout.tsx  Markdown.tsx  Navbar.tsx  NotFound.tsx  Post.tsx  PostForm.tsx  Renderer.tsx  Stream.tsx
client/src/hooks/: useDeleteModal.tsx  usePostActions.ts
client/src/lib/: fetchClient.ts  formatDate.ts  utils.ts
client/src/model/: Post.ts  User.ts
client/src/pages/: Home.tsx  Post.tsx
client/src/providers/: AuthProvider.tsx
src/: auth.rs  db.rs  main.rs  post.rs  posts.rs  server.rs  state.rs  subcommand.rs  user.rs
