[package]
name = "stream"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.70"
async-mongodb-session = { version = "3.0.0", default_features = false }
async-session = "3.0.0"
axum = { version = "0.6.12", features = ["headers", "json"] }
axum-server = "0.4.7"
chrono = "0.4.24"
clap = { version = "4.2.0", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.27"
http = "0.2.9"
log = "0.4.17"
mongodb = "2.4.0"
oauth2 = "4.3.0"
reqwest = { version = "0.11.16", default_features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
