[package]
name = "stream"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
async-mongodb-session = { version = "3.0.0", default_features = false }
async-session = "3.0.0"
axum = { version = "0.6.20", features = ["headers", "json"] }
axum-server = "0.4.7"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.2"
futures = "0.3.30"
http = "0.2.12"
log = "0.4.21"
mongodb = "2.8.2"
oauth2 = "4.4.2"
reqwest = { version = "0.11.16", default_features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
