[package]
name = "stream"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.100"
async-mongodb-session = { version = "3.0.0", default-features = false, features = ["tokio-runtime"] }
async-session = "3.0.0"
axum = { version = "0.8.8", features = ["json"] }
axum-server = "0.8.0"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
http = "1.4.0"
log = "0.4.29"
mongodb = "3.4.1"
oauth2 = "5.0.0"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
